
The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Fixed
- [API_PARSER] [NETSKOPE] Correctly update the last_collected_timestamp, even when no logs are received
- [API_PARSER] [CYBEREASON] Avoid None evaluation of log objects in format_log for malops


## [2.22.0] - 2025-02-25
### Added
- [SERVICE] [FILEBEAT] Support new rc calls to check services separatly
### Fixed
- [API_PARSER] [CISCO_UMBRELLA_MANAGED_ORG] Avoid errors and crashes when no logs are available for some customer IDs
- [API_PARSER] [CARBON_BLACK] Avoid API limits of 10k logs
- [SERVICE] [FILEBEAT] Ensure config files are correctly deleted on Listener deletion
- [ACLs] [APIs] Correct URL path to change ACLs through APIs
### Changed
- [API_PARSER] [CARBON_BLACK] Use v7 of APIs


## [2.21.0] - 2025-02-06
### Changed
- [API_PARSER] [NETSKOPE] Add the possiblity to retrieve 3 new kinds of logs
### Fixed
- [API_PARSER] [NETSKOPE] Remove duplicated logs
- [API_PARSER] [CATONETWORKS] Fix invalid HTML
- [API_PARSER] [WAF_CLOUDFLARE] Correctly set and use the `fields` list
- [API_PARSER] [CISCO_DUO] Avoid updating last timestamp when unecessary and add a 2-minute delay to collect


## [2.20.0] - 2025-02-04
### Added
- [API_PARSER] [CATONETWORKS] New collector
- [API_PARSER] [INFOBLOX_THREAT_DEFENSE] New collector
- [API_PARSER] [BEYONDTRUST_REPORTINGS] New collector


## [2.19.0] - 2025-01-16
### Added
- [API_PARSER] [CISCO_UMBRELLA-MANAGED-ORG] New collector
- [API_PARSER] [SENTINEL ONE SINGULARITY MOBILE] New collector
- [SYSTEM] [PKI] Add POST, PUT and DELETE requests for APIs
### Changed
- [API_PARSER] [HARFANGLAB] truncate 'rule_content' and 'process_sigma_rule_content' fields if they have more than 16384 characters
- [API_PARSER] [API_BEYONDTRUST_PRA] Add fields
- [DEPENDENCIES]
  - djongo 1.3.6.post5 -> 1.3.7 (corrected)
  - aiohttp 3.9.3 -> 3.10.5